@@ -1,4 +1,6 @@
 1.19.0
+- Revisited ocean floor friction and silting
+	- ...mostly spurred from a lot of development in this area due to NPC work
 - Added "Guide Mode" to Terrain Adjust tool: keep SHIFT pressed and you'll be able to draw terrain along straight lines
 - Musical theme for this release: Carbon Based Lifeforms, entire discography
 
